Fix: another gap swapped

--- a/src/Party/styles.module.css
+++ b/src/Party/styles.module.css
@@ -1,7 +1,6 @@
 .CharacterList {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
   justify-content: center;
   margin: 25px 12px;
 }
